// $Id$

Wysiwyg Fields 6.x-1.x-dev, xxxx-xx-xx (Development release)
----------------------------------

- Initial 6.x release.