@@ -1,4 +1,3 @@
-; $Id$
 name = "WIF 1.x to WF"
 description = "Wysiwyg ImageField 1.x to Wysiwyg Fields migration tool"
 dependencies[] = "wysiwyg_fields"
