@@ -1,5 +1,4 @@
 <?php
-// $Id$
 /**
  * @file
  * Wysiwyg ImageField 1.x to Wysiwyg Fields migration tool.
