@@ -1,4 +1,6 @@
-/** $Id$ **/
+/**
+ * @file
+ */
 
 .wysiwyg_fields {
   cursor: default;
