@@ -1,4 +1,6 @@
-/** $Id$ **/
+/**
+ * @file
+ */
 
 .wysiwyg_fields_icons {
   max-height: 160px;
