@@ -1,0 +1,35 @@
+<?php
+/**
+ * @file
+ * Wysiwyg Fields help for admin/help#wysiwyg_fields.
+ */
+?>
+<h2>Configuration</h2>
+<p>
+  Wysiwyg Fields settings can be found with the standard CCK field settings:<br />
+  &nbsp;&nbsp;Administer > Content management > Content types > [content type] > Manage fields > [field] > Configure<br />
+  &nbsp;&nbsp;http://[www.yoursite.com/path/to/drupal]/admin/content/node-type/[content-type]/fields/[field]
+</p>
+<ul>
+  <li>Expand the <strong>Wysiwyg Fields settings</strong> fieldset.</li>
+  <li>Check the <strong>Attach to Wysiwyg?</strong> checkbox.</li>
+  <li>Choose or upload icon for the Wysiwyg Field.</li>
+  <li>Select at least one (1) formatter.</li>
+  <li>(optional) Expand and configure the <strong>Advanced settings</strong>.</li>
+</ul>
+
+<p>&nbsp;</p>
+<h2>Tips &amp; Tricks</h2>
+<p>
+  <em>Coming soon</em>
+</p>
+
+<p>&nbsp;</p>
+<h2>Frequently asked questions</h2>
+<dl>
+  <dt><strong>Where did my CCK field go?</strong></dt>
+  <dd>For usability purposes, Wysiwyg Fields consumes the fields that it is enabled on. If the field is required for use outside of the Wysiwyg it is recommended that you create a second field specifically for use with Wysiwyg Fields.</dd>
+
+  <dt><strong>How can I see all the items on a Wysiwyg Field?</strong></dt>
+  <dd>While the Wysiwyg Fields dialog is active you will see a <strong>+</strong> icon to the left of the dialog title, simply click the <strong>+</strong> to display the full CCK field view.</dd>
+</dl>
